--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"prettier": "^2.6.2",
 		"prettier-plugin-svelte": "^2.7.0",
 		"svelte": "^3.46.0",
+		"svelte-awesome-icons": "^0.2.2",
 		"svelte-check": "^2.7.1",
 		"svelte-heros": "^2.3.3",
 		"svelte-preprocess": "^4.10.7",
